# Firmware-Scanner

./: .gitignore  Cargo.toml
crates/fw-api/: Cargo.toml
crates/fw-api/migrations/: 20240101000000_initial.sql
crates/fw-api/src/: main.rs
crates/fw-api/src/auth/: jwt.rs  mod.rs
crates/fw-api/src/db/: mod.rs  schema.rs
crates/fw-api/src/models/: mod.rs  report.rs  scan.rs  user.rs
crates/fw-api/src/routes/: admin.rs  auth.rs  mod.rs  reports.rs  scans.rs
crates/fw-api/src/workers/: mod.rs  scanner.rs
crates/fw-cli/: Cargo.toml
crates/fw-cli/src/: main.rs
crates/fw-core/: Cargo.toml
crates/fw-core/src/: lib.rs
crates/fw-core/src/analysis/: crypto.rs  identity.rs  mod.rs  networking.rs  storage.rs  telemetry.rs  update.rs
crates/fw-core/src/claims/: engine.rs  mod.rs  taxonomy.rs
crates/fw-core/src/dormant/: detector.rs  mod.rs
crates/fw-core/src/evidence/: collector.rs  export.rs  mod.rs
crates/fw-core/src/ingestion/: arch.rs  container.rs  filesystem.rs  mod.rs
crates/fw-core/src/report/: json.rs  markdown.rs  mod.rs
crates/fw-dashboard/: Cargo.toml
crates/fw-dashboard/src/: app.rs  main.rs
crates/fw-dashboard/src/components/: capability_matrix.rs  mod.rs  nav.rs  scan_card.rs
crates/fw-dashboard/src/pages/: dashboard.rs  mod.rs  reports.rs  scans.rs  settings.rs
crates/fw-marketing/: Cargo.toml
crates/fw-marketing/src/: app.rs  lib.rs  main.rs
crates/fw-marketing/src/components/: cards.rs  footer.rs  mod.rs  nav.rs
crates/fw-marketing/src/pages/: contact.rs  docs.rs  features.rs  home.rs  mod.rs  pricing.rs
crates/fw-parsers/: Cargo.toml
crates/fw-parsers/src/: archives.rs  containers.rs  elf.rs  filesystems.rs  lib.rs  magic.rs  pe.rs
crates/fw-scraper/: Cargo.toml
crates/fw-scraper/src/: discovery.rs  downloader.rs  lib.rs  queue.rs  sources.rs
crates/fw-signatures/: Cargo.toml
crates/fw-signatures/data/: endpoints.toml  magic.toml  networking.toml  telemetry.toml  vulnerabilities.toml
crates/fw-signatures/src/: lib.rs  magic.rs  patterns.rs  strings.rs
crates/fw-tools/: Cargo.toml
crates/fw-tools/src/: binwalk.rs  clamav.rs  entropy.rs  ghidra.rs  hashing.rs  lib.rs  objdump.rs  radare2.rs  strings.rs  yara.rs
examples/: automated_scan.rs
scripts/: scan_firmware.rs
