[package]
name = "fw-cli"
version.workspace = true
edition.workspace = true
description = "Command-line interface for firmware scanner"

[[bin]]
name = "fw-scan"
path = "src/main.rs"

[dependencies]
fw-core = { path = "../fw-core" }
fw-parsers = { path = "../fw-parsers" }

# CLI
clap.workspace = true

# Crypto
sha2.workspace = true

# Async
tokio.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Utilities
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
hex.workspace = true

[dev-dependencies]
tempfile.workspace = true
