[package]
name = "fw-core"
version.workspace = true
edition.workspace = true
description = "Core firmware analysis engine"

[dependencies]
fw-parsers = { path = "../fw-parsers" }
fw-signatures = { path = "../fw-signatures" }

# Async
tokio.workspace = true
async-trait.workspace = true

# Hashing
sha2.workspace = true
blake3.workspace = true
md-5.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Pattern matching
aho-corasick.workspace = true
memchr.workspace = true
regex.workspace = true

# Utilities
uuid.workspace = true
chrono.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
bytes.workspace = true
hex.workspace = true
walkdir.workspace = true
tempfile.workspace = true
rayon.workspace = true
parking_lot.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
