[package]
name = "fw-marketing"
version.workspace = true
edition.workspace = true
description = "Marketing website for firmware scanner"

[[bin]]
name = "fw-marketing"
path = "src/main.rs"

[dependencies]
# Leptos
leptos.workspace = true
leptos_axum.workspace = true
leptos_router.workspace = true
leptos_meta.workspace = true

# Web framework
axum.workspace = true
tower.workspace = true
tower-http.workspace = true
tokio.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Utilities
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
config.workspace = true

[features]
default = ["ssr"]
ssr = ["leptos/ssr", "leptos_router/ssr", "leptos_meta/ssr"]
hydrate = ["leptos/hydrate", "leptos_router/hydrate", "leptos_meta/hydrate"]
