[package]
name = "fw-scraper"
version.workspace = true
edition.workspace = true
description = "Automated firmware discovery and download"

[dependencies]
# HTTP client
reqwest = { version = "0.11", features = ["json", "stream", "rustls-tls"] }
tokio = { workspace = true, features = ["full"] }

# HTML parsing
scraper = "0.18"
select = "0.6"

# URL handling
url = "2.5"

# Serialization
serde.workspace = true
serde_json.workspace = true

# Async
futures = "0.3"
async-trait.workspace = true

# Utilities
thiserror.workspace = true
tracing.workspace = true
regex.workspace = true
chrono.workspace = true
sha2.workspace = true
hex.workspace = true
tempfile.workspace = true
uuid.workspace = true
toml.workspace = true

# Rate limiting
governor = "0.6"

# Robots.txt
robotstxt = "0.3"

[dev-dependencies]
tokio-test = "0.4"
wiremock = "0.5"
