[package]
name = "fw-tools"
version.workspace = true
edition.workspace = true
description = "External tool integration for firmware analysis"

[dependencies]
# Async runtime
tokio = { workspace = true, features = ["full", "process"] }
async-trait.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true
toml.workspace = true

# Error handling
thiserror.workspace = true

# Logging
tracing.workspace = true

# Utilities
regex.workspace = true
tempfile.workspace = true
which = "6.0"

# Path handling
walkdir.workspace = true

# Hashing
sha2.workspace = true
md5.workspace = true
sha1.workspace = true
crc32fast.workspace = true

# Process management
wait-timeout = "0.2"

[dev-dependencies]
tokio-test = "0.4"
